--- a/public/assets/stylesheets/less/tables.less
+++ b/public/assets/stylesheets/less/tables.less
@@ -424,6 +424,7 @@ table.default {
                 text-align: left;
             }
             > td {
+	            padding-left: 1px;
                 border-bottom: 1px solid @table-header-color;
                 transition: background-color 0.3s;
             }
@@ -439,7 +440,7 @@ table.default {
     > tbody > tr.new > td {
         font-weight: bold;
         &:first-child {
-            margin-left: 2px;
+            padding-left: 0px;
             border-left: 2px solid @red;
         }
     }
