--- a/public/assets/stylesheets/style.css
+++ b/public/assets/stylesheets/style.css
@@ -759,6 +759,7 @@ table.default > tbody > tr > th {
   text-align: left;
 }
 table.default > tbody > tr > td {
+  padding-left: 1px;
   border-bottom: 1px solid #e2e3e5;
   transition: background-color 0.3s;
 }
@@ -773,7 +774,7 @@ table.default > tbody > tr.new > td {
   font-weight: bold;
 }
 table.default > tbody > tr.new > td:first-child {
-  padding-left: 2px;
+  padding-left: 0px;
   border-left: 2px solid #d60000;
 }
 table.default > tbody:last-of-type > tr:last-child > td {
@@ -5852,23 +5853,40 @@ input.document-checkbox[type="checkbox"] {
 }
 input.document-checkbox[type="checkbox"] + label span {
   display: inline-block;
-  width: 16px;
-  height: 16px;
+  width: 30px;
+  height: 20px;
   margin: 0px 0px 0 0;
-  vertical-align: middle;
+  vertical-align: bottom;
+  text-align: center;
+  cursor: pointer;
+}
+input.document-checkbox[type="checkbox"] + label span::after {
+  background-repeat: no-repeat;
+  content: ' ';
+  display: inline-block;
+  height: 16px;
+  margin-left: 4;
   background-image: url("../images/icons/blue/checkbox-unchecked.svg");
   -webkit-background-size: 16px 16px;
   -moz-background-size: 16px 16px;
   -o-background-size: 16px 16px;
   background-size: 16px 16px;
-  cursor: pointer;
+  vertical-align: text-top;
+  width: 16px;
 }
-input.document-checkbox[type="checkbox"]:checked + label span {
+input.document-checkbox[type="checkbox"]:checked + label span::after {
+  background-repeat: no-repeat;
+  content: ' ';
+  display: inline-block;
+  height: 16px;
+  margin-left: 4;
   background-image: url("../images/icons/blue/checkbox-checked.svg");
   -webkit-background-size: 16px 16px;
   -moz-background-size: 16px 16px;
   -o-background-size: 16px 16px;
   background-size: 16px 16px;
+  vertical-align: text-top;
+  width: 16px;
 }
 /* for file/edit and folder/edit only: */
 @media screen and (max-width: 800px) {
